Fix for sending encrypted mails to untrusted recipients

REVIEW: 107847
BUG: 284274